<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jcsoftware.rmshelper.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvUPC_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/sn_UPC" />

        <EditText
            android:id="@+id/etUPC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_weight="4"
            android:background="@drawable/edittextstyle"
            android:digits="0123456789"
            android:ellipsize="start"
            android:hint="@string/sn_EnterUPC"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:enabled="true"
            android:cursorVisible="true"
            />

        <TextView
            android:id="@+id/tvLastSold_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/sn_LastSold" />

        <TextView
            android:id="@+id/tvLastSold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/edittextstyle"
            android:ellipsize="start"
            android:enabled="false" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvDescription_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout1"
        android:text="@string/sn_Description" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_toRightOf="@+id/tvDescription_"
        android:layout_toEndOf="@+id/tvDescription_"
        android:background="@drawable/textviewstyle" />

    <TextView
        android:id="@+id/tvExtendedDescription_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvDescription_"
        android:text="@string/sn_ExtendedDescription" />

    <EditText
        android:id="@+id/etExtendedDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvExtendedDescription_"
        android:background="@drawable/textviewstyle"
        android:inputType="textMultiLine"
        android:lines="3" />

    <TextView
        android:id="@+id/tvSubDescription1_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etExtendedDescription"
        android:text="@string/sn_D1" />

    <TextView
        android:id="@+id/tvSubDescription1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etExtendedDescription"
        android:layout_toRightOf="@+id/tvSubDescription1_"
        android:layout_toEndOf="@+id/tvSubDescription1_"
        android:background="@drawable/textviewstyle" />

    <TextView
        android:id="@+id/tvSubDescription2_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvSubDescription1_"
        android:text="@string/sn_D2" />

    <TextView
        android:id="@+id/tvSubDescription2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvSubDescription1"
        android:layout_toRightOf="@+id/tvSubDescription1_"
        android:layout_toEndOf="@+id/tvSubDescription1_"
        android:background="@drawable/textviewstyle" />

    <TextView
        android:id="@+id/tvSubDescription3_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvSubDescription2_"
        android:text="@string/sn_D3" />

    <TextView
        android:id="@+id/tvSubDescription3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvSubDescription3_"
        android:layout_toRightOf="@+id/tvSubDescription3_"
        android:layout_toEndOf="@+id/tvSubDescription3_"
        android:background="@drawable/textviewstyle" />

    <TextView
        android:id="@+id/tvRetailPrice_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSubDescription3_"
        android:text="@string/sn_RetailPrice" />

    <TextView
        android:id="@+id/tvRetailPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvRetailPrice_"
        android:layout_toRightOf="@+id/tvRetailPrice_"
        android:layout_toEndOf="@+id/tvRetailPrice_"
        android:background="@drawable/textviewstyle"
        android:gravity="center_vertical|center_horizontal" />

    <TextView
        android:id="@+id/tvSalePrice_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRetailPrice_"
        android:text="@string/sn_SalePrice" />

    <TextView
        android:id="@+id/tvSalePrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvSalePrice_"
        android:layout_gravity="center_vertical"
        android:layout_toRightOf="@+id/tvSalePrice_"
        android:layout_toEndOf="@+id/tvSalePrice_"
        android:background="@drawable/textviewstyle"
        android:gravity="center_vertical|center_horizontal" />

    <TextView
        android:id="@+id/tvCost_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSalePrice_"
        android:text="@string/sn_CostPrice" />

    <TextView
        android:id="@+id/tvCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvCost_"
        android:layout_below="@+id/tvSalePrice"
        android:layout_gravity="center_vertical"
        android:layout_toRightOf="@id/tvCost_"
        android:layout_toEndOf="@id/tvCost_"
        android:background="@drawable/textviewstyle"
        android:gravity="center_vertical|center_horizontal" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCost">

        <CheckBox
            android:id="@+id/cb7Days"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/sn_7Days" />

        <TextView
            android:id="@+id/tv7Days"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/textviewstyle"
            android:gravity="center_vertical|center_horizontal" />

        <CheckBox
            android:id="@+id/cb15Days"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/sn_15Days" />

        <TextView
            android:id="@+id/tv15Days"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/textviewstyle"
            android:gravity="center_vertical|center_horizontal" />

        <CheckBox
            android:id="@+id/cb30Days"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/sn_30Days" />

        <TextView
            android:id="@+id/tv30Days"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/textviewstyle"
            android:gravity="center_vertical|center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2">

        <TextView
            android:id="@+id/tvDept_"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sn_Deptartment" />

        <TextView
            android:id="@+id/tvDept"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/textviewstyle" />

        <TextView
            android:id="@+id/tvSupp_"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sn_Supplier" />

        <TextView
            android:id="@+id/tvSupp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/textviewstyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3">

        <TextView
            android:id="@+id/tvSS_"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sn_SS" />

        <TextView
            android:id="@+id/tvSS"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/textviewstyle" />

        <TextView
            android:id="@+id/tvSE_"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sn_SE" />

        <TextView
            android:id="@+id/tvSE"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/textviewstyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout4">

        <TextView
            android:id="@+id/tvSuppliers"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/textviewstyle"
            android:text="@string/sn_Suppliers" />

        <TextView
            android:id="@+id/tvMPQ"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textviewstyle"
            android:text="@string/sn_MPQ" />

        <TextView
            android:id="@+id/tvCosts"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textviewstyle"
            android:text="@string/sn_Cost" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        style="?android:attr/buttonBarButtonStyle"
        >

        <Button
            android:id="@+id/bCopy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"
            android:text="@string/sn_Copy" />

        <Button
            android:id="@+id/bPrint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"
            android:text="@string/sn_Print" />

        <Button
            android:id="@+id/bPO"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="2"
            android:text="@string/sn_PO" />

        <Button
            android:id="@+id/bSelect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="2"
            android:text="@string/sn_Select" />

        <Button
            android:id="@+id/bExit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="2"
            android:text="@string/sn_Exit" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearLayout7"
        android:layout_below="@id/linearLayout5"
        android:baselineAligned="false">

        <ListView
            android:id="@+id/lvSuppliers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/listviewstyle" />

        <ListView
            android:id="@+id/lvMPQ"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/listviewstyle" />

        <ListView
            android:id="@+id/lvCosts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/listviewstyle" />

    </LinearLayout>

</RelativeLayout>
