<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jcsoftware.rmshelper.POSelectorActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout1">

        <TextView
            android:id="@+id/tvSelectEndDate_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/sn_SelectEndDate" />

        <TextView
            android:id="@+id/tvSelectEndDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="@drawable/edittextstyle"
            android:ellipsize="start"
            android:enabled="true"
            android:clickable="true" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvPleaseSelect_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please Select PO : "
        android:layout_below="@id/linearLayout2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        style="?android:attr/buttonBarButtonStyle">

        <Button
            android:id="@+id/bSelect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="2"
            android:text="@string/sn_Select" />

        <Button
            android:id="@+id/bCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="2"
            android:text="@string/sn_Cancel" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearLayout7"
        android:layout_below="@id/tvPleaseSelect_"
        android:baselineAligned="false">

        <ListView
            android:id="@+id/lvPONumbers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/listviewstyle" />

        <ListView
            android:id="@+id/lvVendorNames"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/listviewstyle" />

        <ListView
            android:id="@+id/lvCreatedDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/listviewstyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/tvSelectStartDate_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/sn_SelectStartDate" />

        <TextView
            android:id="@+id/tvSelectStartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="@drawable/edittextstyle"
            android:ellipsize="start"
            android:enabled="true"
            android:clickable="true" />
    </LinearLayout>

</RelativeLayout>